# BCE2024

./: CMakeLists.txt  CMakeSourceLists.txt
AutosarModel/: AutosarDescriptions.lst
apps/light/lce/swc_lce_com_manager/: CMakeSourceLists.txt
apps/light/lce/swc_lce_com_manager/include/: SwcLceComManager.h
apps/light/lce/swc_lce_com_manager/src/: SwcLceComManager.cpp
apps/light/lce/swc_lce_master/: CMakeSourceLists.txt
bceutil/Config/: GMockGenerator.config
bceutil/Scripts/: generateTestRte.bat
bceutil/Scripts/ArUnit/: artifacts.xml  install.bat  install.sh
bceutil/Scripts/ArUnit/configuration/: config.ini
bceutil/Scripts/ArUnit/configuration/org.eclipse.core.runtime/: .table.2  .table.3
bceutil/Scripts/ArUnit/configuration/org.eclipse.equinox.simpleconfigurator/: bundles.info
bceutil/Scripts/ArUnit/configuration/org.eclipse.osgi/: framework.info.2  framework.info.3
bceutil/Scripts/ArUnit/configuration/org.eclipse.update/: platform.xml
bceutil/Scripts/ArUnit/features/org.artop.arunit.headless.launcher_0.11.9.202102121433/: feature.properties  (+1 more)
test_rte/generatedold/: Rte_SwcLceComManager.cpp  Rte_SwcLceComManager.h  Rte_SwcLceComManager_BufferDecorator.cpp  Rte_SwcLceComManager_BufferDecorator.h  Rte_SwcLceComManager_CanoeTraceDump.cpp  Rte_SwcLceComManager_CanoeTraceDump.h  Rte_SwcLceComManager_Interface.h  Rte_SwcLceComManager_Mock.cpp  Rte_SwcLceComManager_Mock.h  Rte_SwcLceComManager_TraceDecorator.cpp  Rte_SwcLceComManager_TraceDecorator.h  Rte_SwcLceComManager_Type.h  Rte_Type.h  SwcLceComManager_FixtureBase.cpp  SwcLceComManager_FixtureBase.h
(+16 files in other folders)
